force-app/main/default/objects/Student__c/fields/address__c.field-meta.xml
<CustomField>
    <fullName>address__c</fullName>
    <description>enter your address</description>
    <label>address</label>
    <type>TextArea</type>
</CustomField>