force-app/main/default/objects/Student__c/fields/dob__c.field-meta.xml
<CustomField>
    <fullName>dob__c</fullName>
    <description>enter date of birth</description>
    <label>dob</label>
    <required>true</required>
    <type>Date</type>
</CustomField>