force-app/main/default/objects/Student__c/fields/e_mail__c.field-meta.xml
<CustomField>
    <fullName>e_mail__c</fullName>
    <description>enter email address</description>
    <label>e-mail</label>
    <type>Email</type>
</CustomField>