force-app/main/default/objects/Student__c/fields/Fees_paid__c.field-meta.xml
<CustomField>
    <fullName>Fees_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fees paid</label>
    <type>Checkbox</type>
</CustomField>