force-app/main/default/objects/Student__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <description>enter mobile no</description>
    <label>phone</label>
    <type>Phone</type>
</CustomField>