force-app/main/default/objects/Student__c/fields/reg_no__c.field-meta.xml
<CustomField>
    <fullName>reg_no__c</fullName>
    <description>resistration number must enter number only</description>
    <label>reg_no</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>