force-app/main/default/objects/Student__c/fields/Serial_no__c.field-meta.xml
<CustomField>
    <fullName>Serial_no__c</fullName>
    <label>serial_no</label>
    <type>AutoNumber</type>
</CustomField>