force-app/main/default/objects/Student__c/validationRules/Email_Must_Be_Domain.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Must_Be_Domain</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(CONTAINS(e_mail__c, &quot;@student.edu&quot;))</errorConditionFormula>
    <errorDisplayField>e_mail__c</errorDisplayField>
    <errorMessage>Email must be a valid student institutional email.</errorMessage>
</ValidationRule>