force-app/main/default/objects/Student__c/validationRules/Fees_Must_Be_Paid_Before_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Fees_Must_Be_Paid_Before_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Enrollment_Status__c, &quot;Approved&quot;),
  Fees_paid__c = FALSE
)</errorConditionFormula>
    <errorMessage>Fees must be paid before approving an enrollment</errorMessage>
</ValidationRule>